# rust_tracing_in_one_weekend

./: Cargo.toml  README.md  ray_tracing_the_next_week.ppm  rust_cheat_sheet.md
rust_tracing/: image.ppm
rust_tracing/src/: bvh.rs  camera.rs  cuboid.rs  hit_record.rs  hittable.rs  instance.rs  main.rs  material.rs  ray.rs  sphere.rs  texture.rs  tools.rs
src/: bvh.rs  camera.rs  constant_medium.rs  hittable.rs  instance.rs  main.rs  perlin.rs  ray.rs  rectangle.rs  render_code.txt  sphere.rs  tools.rs
