[package]
name = "aidac"
version = "0.1.0"
authors = ["david-sharkoon-win <dasco597@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
glam = "0.9.4"
rand = "0.7.3"
dyn-clone = "1.0.2"
array-init = "0.1.1"